BugFix: Result image overflow on the y axis

--- a/src/components/Result.css
+++ b/src/components/Result.css
@@ -11,15 +11,10 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 600px;
+    /* height: 600px; */
+    min-height: 600px;
     border: 2px solid var(--contours-primary);
 }
-
-/* .resultImageContainer img {
-    height: 100%;
-    width: 100%;
-    object-fit: contain;
-} */
 
 .imageWrapper {
     position: relative;
